# vectra_bot

./: .env  .gitignore  1.py  111.ipynb  Dockerfile  VFD.ipynb  banking_tools.py  base.py  chat_bot.py  database.py  debug_sql_agent.py  llm_handler.py  main copy 2.py  main copy.py  main.py  main_antigravity.py  notes  ollama_service.py  pyproject.toml  test_banking_integration.py  tools.py
faiss_dbs/DMC/: index.faiss  index.pkl
