[project]
name = "my-fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "SQLAlchemy",
    "psycopg[binary]",
    "redis",
    "python-dotenv",
    "requests",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "alembic",
    "ollama",
    "langgraph",
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-tavily",
    "langchain-google-genai",
    "langgraph-checkpoint-postgres",
    "python-dateutil",
    "pandas",
    "matplotlib",
    "faiss-cpu",
    "psycopg2-binary",
    "pypdf",
]
